--- a/src/utils/styles/_typography.scss
+++ b/src/utils/styles/_typography.scss
@@ -8,7 +8,7 @@ html, body {
 }
 
 .LightMode {
-    color: #333;
+    color: #000;
 }
 
 .DarkMode {
